--- a/index.html
+++ b/index.html
@@ -5,30 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="./image/favicon.png" type="image/png">
-    <title>Política de Privacidade</title>
+    <title>Termos de Uso</title>
 </head>
 <body>
-    <h2>POLÍTICA DE PRIVACIDADE</h2>
-    <p>Nossa Política de Privacidade tem como intuito orientar o titular, ou seja, o cliente do nosso Aplicativo ST3D que não coletamos nenhuma informação pessoal do usuário, apenas temos interesse em informar. Genildo Nogueira construiu o aplicativo Sistema de Treino R3D como um aplicativo gratuito. Este SERVIÇO é fornecido por Genildo Nogueira sem nenhum custo e destina-se ao uso como está.</p>
-    <p>Esta página é usada para informar os visitantes sobre minhas políticas de coleta, uso e divulgação de informações pessoais, caso alguém decida usar meu serviço.
-        Se você optar por usar meu serviço, concorda com a coleta e o uso de informações relacionadas a esta política. As Informações Pessoais que eu coleto são usadas para fornecer e melhorar o Serviço. Não usarei ou compartilharei suas informações com ninguém, exceto conforme descrito nesta Política de Privacidade.
-        Os termos utilizados nesta Política de Privacidade têm os mesmos significados que em nossos Termos e Condições, que estão acessíveis no Sistema de Treino R3D, salvo disposição em contrário nesta Política de Privacidade.
-    </p>
-    <p><b>COLETA E USO DE INFORMAÇÕES:</b></p>
-    <p>Para uma melhor experiência, ao usar nosso Serviço, posso exigir que você nos forneça certas informações de identificação pessoal, incluindo, entre outras, Nome, Data de nascimento, Localização geográfica, imagens. dispositivo e não é coletado por mim de forma alguma.
-        O aplicativo usa serviços de terceiros que podem coletar informações usadas para identificá-lo. 
-    </p>
-    <p><b>QUEM TEVE UTILIZAR NOSSO APLICATIVO:</b></p>
-    <p>Nosso aplicativo tem caráter informativo, podendo ser utilizado por qualquer pessoa.</p>
-    <p><b>SEGURNÇA:</b></p>
-    <p>Eu valorizo sua confiança em nos fornecer suas informações pessoais, portanto, estamos nos esforçando para usar meios comercialmente aceitáveis de protegê-las. Mas lembre-se que nenhum método de transmissão pela internet, ou método de armazenamento eletrônico é 100% seguro e confiável, e não posso garantir sua segurança absoluta.</p>
-    <p><b>DADOS QUE COLETAMOS E MOTIVO DA COLETA:</b></p>
-    <p><b>'DIREITOS AUTORAIS – LEI 9,610/98'</b></p>
-    <p>Todo o material desta apostila está protegida por direitos autorais de seu criador: ST3D, sendo proibido toda e qualquer forma de plágio, cópia, compartilhamento ou qualquer outra forma de uso, não autorizada expressamente, seja ela onerosa ou são, sujeitando-se o transgressor, as penalidades previstas civil e criminalmente.</p>
-    <p><b>Mudanças nesta Política de Privacidade:</b></p>
-    <p>Posso atualizar nossa Política de Privacidade de tempos em tempos. Assim, você é aconselhado a revisar esta página periodicamente para quaisquer alterações. Vou notificá-lo sobre quaisquer alterações, publicando a nova Política de Privacidade nesta página.</p>
-    <p>Esta política é efetiva a partir de 2023-01-11</p>
-    <p><b>CONTATE-NOS:</b></p>
-    <p>Se você tiver alguma dúvida ou sugestão sobre minha Política de Privacidade, não hesite em me contatar em <mark>revolucao3dcursos@gmail.com.</mark></p>
+    <h2>TERMOS DE USO DO APP SISTEMA DE TREINO</h2>
+    <p><b>✅Fica PROIBIDO tirar PRINT ou  COMPARTILHAR imagens do Aplicativo com outras pessoas.</b></p>
+    <p><b>✅Fica PROIBIDO compartilhar SENHA ou E-MAIL de acesso ao aplicativo, caso o sistema perceba isso a sua conta sera EXCLUÍDA do SISTEMA DE TREINO sem aviso prévio.</b></p>
+    <p><b>✅O aplicativo é de uso exclusivo para os clientes cadastrado no sistema.</b></p>
+    <p><b>✅Qualquer violação dos direitos autorais do APP SISTEMA DE TREINO o cliente pagará multa - lei 9.610/98.</b></p>
+    <p><b>⚠ Dúvidas sobre o termo de uso do App é só perguntar, contato: <mark>revolucao3dcursos@gmail.com</mark>.</b></p>
+    <p><b>SISTEMA DE TREINO R3D</b></p>
 </body>
 </html>
