--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="./image/favicon.png" type="image/png">
+    <meta name="color-scheme" content="light dark">
     <title>Termos de Uso</title>
+    <link rel="icon" href="./image/favicon.png" type="image/png">
+    <script src="./main.js" defer></script>
 </head>
 <body>
     <h2>TERMOS DE USO DO APP SISTEMA DE TREINO</h2>
